--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
 title: YunsChou
-subtitle: 既然选择了远方，便只顾风雨兼程 
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: 这里是我用来记录平时学习的地方
-creator: <a href="http://onev.cat">@onevcat</a>
+subtitle: 既然选择了远方，便只顾风雨兼程
+description: 我是YunChou，一名iOS开发者，这里是我用来记录平时学习的地方
+welcome_message: 欢迎你的访问
+creator: <a href="http://yunschou.github.io">@YunsChou</a>
 
-url: "http://http://yunschou.github.io"
+url: "http://yunschou.github.io"
 
 permalink: /:year/:month/:title/
 
@@ -20,12 +20,12 @@ cover_color:
 
 # The blog button should not be removed.
 blog_button:
-    title: Blog
-    description: Visit blog
+    title: 博客
+    description: 访问博客
 
 # Navigation buttons in the front page.
 nav:
-    - {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
+    - {title: Projects, description: My Projects, url: 'http://yunschou.github.io'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
@@ -40,11 +40,9 @@ comment:
     
 # Social
 social:
-    weibo: onevcat
-    github: onevcat
-    twitter: onevcat
-    gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    weibo: YunsChou
+    github: YunsChou
+    mail: YunsChou@gmail.com
 
 # Google Analytics
 ga:
