--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ blog_button:
 
 # Navigation buttons in the front page.
 nav:
-    - {title: Projects, description: My Projects, url: 'http://yunschou.github.io'}
+    - {title: 关于, description: 封面信息, url: 'http://yunschou.github.io'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
