--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ comment:
     
 # Social
 social:
-    weibo: YunsChou
+    weibo: u/1846084097
     github: YunsChou
     mail: YunsChou@gmail.com
 
