--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: YunsChou
 subtitle: 既然选择了远方，便只顾风雨兼程
-description: 我是YunChou，一名iOS开发者
+description: 一名iOS开发者
 welcome_message: 欢迎你的访问
 creator: <a href="http://yunschou.github.io">@YunsChou</a>
 
